# Kata

./: pyproject.toml
.github/workflows/: test.yml
bowling_game/: __init__.py  bowling_game.py
test/bowling_game/: test_bowling_game.py
