[tool.poetry]
name = "kata"
version = "0.1.0"
description = ""
authors = ["Paul Beck <paul.beck.berlin@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
pytest = "^7.2.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
pythonpath = [
  "."
]
